apps/base/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak

spec:
  ingressClassName: traefik
  rules:
  - host: auth.landryzetam.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
  # Optional: Add TLS configuration
  # tls:
  # - hosts:
  #   - auth.landryzetam.net  #   secretName: keycloak-tls
